--- a/index.html
+++ b/index.html
@@ -41,8 +41,16 @@
             <div class="welcome-page-items-flexbox">
                 <div class="welcome-page-flexbox">
                     <div class="welcome-page-text-container">
-                        <h1 class="title">Greeting Here</h1>
-                        <div class="about">About Me Goes Here</div>
+                        <h1 class="title">Excellent Catering. Affordable Prices. Nancy's Unique Charm</h1>
+                        <div class="about">
+                            I was walking with a friend, and she told me she doesn't want to cook anymore. She said she made dinner one night, and the very next night she had to do the same thing! It begs the question of 'Who wants to keep cooking after a YEAR of COVID?' The answer is I do! <br>
+                            <br>
+                                If you want to host a small party...a cookout, baby shower, engagement, post bar- or bat-mitzvah brunch, Memorial Day party, a sit-down dinner for your closest circle of friends, or even if you want someone else to do the cooking for dinner for your family a few times a week you should call me. If you're going to someone else's house for an event, and want to bring something special that tastes better than anything you can buy, I will make things that no one else can...either savory or sweet.<br>
+                                <br>
+                                I can meet any dietary needs including Vegetarian, Vegan, Sugar Free, Low Salt or Kosher style, and I deliver to you. Everything I make is done one at a time just for you. No mass production that looks good but has no flavor. (Sound familiar, upscale grocery store chains? You know who you are, and so do we.)<br>
+                                <br>
+                                Call me and talk to me about what you want. You won't regret it. I promise.<br>
+                        </div>
                     </div>
                 </div>
                 <div class="welcome-image-container">
@@ -54,40 +62,33 @@
             <div class="samples-container">
                 <div class="samples-text-container">
                     <h1 class="samples-title">Sample Menus</h1>
+                    <h3 class="samples-text">Click On a Menu to Expand It</h3>
                 </div>
                 <div class="samples-flex-box">
-                    <div class="top-flex-box">
-                        <div class="brunch">
-                            <h1 class="meal-title">Brunch</h1>
-                            <p class="meal-paragraph">Click To See Full Menu</p>
-                            <a href="images/Nancy Poole's Cooking_ Brunch.pdf" target="_blank">
-                                <img class="meal-image-box" src="images/Nancy Poole's Cooking_ Brunch.pdf">
-                            </a>
-                        </div>
-                        <div class="lunch">
-                            <h1 class="meal-title">Lunch</h1>
-                            <p class="meal-paragraph">Click To See Full Menu</p>
-                            <a href="images/Nancy Poole's Cooking_ Brunch.pdf" target="_blank">
-                                <img class="meal-image-box" src="images/Nancy Poole's Cooking_ Lunch.pdf">
-                            </a>
-                        </div>
+                    <div class="brunch">
+                        <h1 class="meal-title">Brunch</h1>
+                        <a href="images/Nancy Poole's Cooking_ Brunch.pdf" target="_blank">
+                            <img class="meal-image-box" src="images/Nancy Poole's Cooking Brunch.jpg" />
+                        </a>
                     </div>
-                    <div class="bottom-flex-box">
-                        <div class="dinner">
-                            <h1 class="meal-title">Dinner</h1>
-                            <p class="meal-paragraph">Click To See Full Menu</p>
-                            <a href="images/Nancy Poole's Cooking_ Dinner.pdf" target="_blank">
-                                <img class="meal-image-box" src="images/Nancy Poole's Cooking_ Dinner.pdf">
-                            </a>
-                        </div>
-                        <div class="dessert">
-                            <h1 class="meal-title">Dessert</h1>
-                            <p class="meal-paragraph">Click To See Full Menu</p>
-                            <a href="images/Nancy Poole's Cooking_ Desserts.pdf" target="_blank">
-                                <img class="meal-image-box" src="images/Nancy Poole's Cooking_ Desserts.pdf">
-                            </a>
-                        </div>
-                    </div>  
+                    <div class="lunch">
+                        <h1 class="meal-title">Lunch</h1>
+                        <a href="images/Nancy Poole's Cooking_ Brunch.pdf" target="_blank">
+                            <img class="meal-image-box" src="images/Nancy Poole's Cooking Lunch.jpg" />
+                        </a>
+                    </div>
+                    <div class="dinner">
+                        <h1 class="meal-title">Dinner</h1>
+                        <a href="images/Nancy Poole's Cooking_ Dinner.pdf" target="_blank">
+                            <img class="meal-image-box" src="images/Nancy Poole's Cooking Dinner.jpg">
+                        </a>
+                    </div>
+                    <div class="dessert">
+                        <h1 class="meal-title">Dessert</h1>
+                        <a href="images/Nancy Poole's Cooking_ Desserts.pdf" target="_blank">
+                            <img class="meal-image-box" src="images/Nancy Poole's Cooking Desserts.jpg">
+                        </a>
+                    </div>
                 </div>
                 
                 
