--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                     </li>
                     <div class="second-navbar">
                         <li class="navbar-item">
-                            <div class="navbar-text" onclick="scrollOffClickSamples()">Bio</div>
+                            <div class="navbar-text" onclick="scrollOffClickBio()">Bio</div>
                         </li>
                         <li class="navbar-item">
-                            <div class="navbar-text" onclick="scrollOffClickReviews()">Skills</div>
+                            <div class="navbar-text" onclick="scrollOffClickSkills()">Skills</div>
                         </li>
                         <li class="navbar-item">
-                            <div class="navbar-text" onclick="scrollOffClickPictures()">Portfolio</div>
+                            <div class="navbar-text" onclick="scrollOffClickPortfolio()">Portfolio</div>
                         </li>
                         <li class="navbar-item">
                             <div class="navbar-text" onclick="scrollOffClickContactMe()">Contact Me</div>
@@ -40,15 +40,18 @@
         <section class="welcome-page-container">
             <div id="video-background">
                 <video autoplay muted loop>
-                    <source src="BlueBackground.mp4" type="video/mp4">
+                    <source src="media/BlueBackground.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="welcome-page-items-flexbox">
                 <div class="welcome-page-flexbox">
                     <div class="welcome-page-text-container">
-                        <h1 class="title">Hi! I'm Jacob, Thanks For Stopping By!</h1>
+                        <h1 class="title">Hi! I'm Jacob</h1>
                         <div class="about">
-                            
+                            Thanks for dropping by! I am a computer science and economics student at Dartmouth College experimenting
+                        </div>
+                        <div class="propic">
+                            <img src="media/Propic.png">
                         </div>
                     </div>
                 </div>
