forgot to commit changes last night

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                     <div class="welcome-page-text-container">
                         <h1 class="title">Hi! I'm Jacob,</h1>
                         <div class="about">
-                            Thanks for dropping by! I am a computer science and economics student at Dartmouth College experimenting
+                            Thanks for dropping by! I am a computer science and economics student at Dartmouth College experimenting 
+                            for the first time in web development! Please enjoy my first website, and check back periodically
+                            as I develop new skills and add to the website
                         </div>
                     </div>
                     <div class="propic-container">
@@ -71,6 +73,37 @@
         <section class="skills">
             <div class="skills-container">
                 <h1 class="skills-title">Skills</h1>
+                <div class="skills-flexbox">
+                    <div class="languages-flexbox">
+                        <div class="language-title">Languages</div>
+                        <ul class="languages-list">
+                            <li class="language">Python</li>
+                            <li class="language">Java</li>
+                            <li class="language">HTML</li>
+                            <li class="language">CSS</li>
+                            <li class="language">JavaScript</li>
+                            <li class="language">Stata</li>
+                            <li class="language">Projected Languages Within A Half Year:</li>
+                            <li class="language">C</li>
+                            <li class="language">React.js</li>
+                        </ul>
+
+                    </div>
+                    <div class="course-flexbox">
+                        <div class="course-title">Relevant Coursework</div>
+                        <ul class="courses-list">
+                            <li class="course">Object Oriented Programming</li>
+                            <li class="course">Discrete Mathematics</li>
+                            <li class="course">Foundations of Applied CS</li>
+                            <li class="course">Projected Courses Within A Year:</li>
+                            <li class="course">Software Design and Implementation</li>
+                            <li class="course">AR/VR</li>
+                            <li class="course">Artificial Intellegence</li>
+                            <li class="course">Algorithms</li>
+                        </ul>
+                        
+                    </div>
+                </div>
             </div>
         </section>
         <!-- Contact Section -->
