--- a/index.html
+++ b/index.html
@@ -77,29 +77,29 @@
                     <div class="languages-flexbox">
                         <div class="language-title">Languages</div>
                         <ul class="languages-list">
-                            <li class="language">Python</li>
-                            <li class="language">Java</li>
-                            <li class="language">HTML</li>
-                            <li class="language">CSS</li>
-                            <li class="language">JavaScript</li>
-                            <li class="language">Stata</li>
+                            <li class="language">- Python</li>
+                            <li class="language">- Java</li>
+                            <li class="language">- HTML</li>
+                            <li class="language">- CSS</li>
+                            <li class="language">- JavaScript</li>
+                            <li class="language">- Stata</li>
                             <li class="language">Projected Languages Within A Half Year:</li>
-                            <li class="language">C</li>
-                            <li class="language">React.js</li>
+                            <li class="language">- C</li>
+                            <li class="language">- React.js</li>
                         </ul>
 
                     </div>
                     <div class="course-flexbox">
                         <div class="course-title">Relevant Coursework</div>
                         <ul class="courses-list">
-                            <li class="course">Object Oriented Programming</li>
-                            <li class="course">Discrete Mathematics</li>
-                            <li class="course">Foundations of Applied CS</li>
-                            <li class="course">Projected Courses Within A Year:</li>
-                            <li class="course">Software Design and Implementation</li>
-                            <li class="course">AR/VR</li>
-                            <li class="course">Artificial Intellegence</li>
-                            <li class="course">Algorithms</li>
+                            <li class="course">- Object Oriented Programming</li>
+                            <li class="course">- Discrete Mathematics</li>
+                            <li class="course">- Foundations of Applied CS</li>
+                            <li class="course">Projected Courses Within A Half Year:</li>
+                            <li class="course">- Software Design and Implementation</li>
+                            <li class="course">- AR/VR</li>
+                            <li class="course">- Artificial Intellegence</li>
+                            <li class="course">- Algorithms</li>
                         </ul>
                         
                     </div>
