--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                             <li class="language">- HTML</li>
                             <li class="language">- CSS</li>
                             <li class="language">- JavaScript</li>
+                            <li class="language">- Bash</li>
                             <li class="language">- Stata</li>
                             <li class="language">Projected Languages Within A Half Year:</li>
                             <li class="language">- C</li>
@@ -119,6 +120,7 @@
                         <ul class="bio-text">
                             <li class="hobby">Dartmouth Jackolantern</li>
                             <li class="hobby">Sigma Nu Fraternity House Manager</li>
+                            <li class="hobby">Dartmouth Hillel</li>
                             <li class="hobby">Dartmouth Outdoors Club</li>
                             <li class="hobby">Basketball, Golf</li>
                             <li class="hobby">Skiing, Hiking</li>
